# pymechanical-stubs

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE.md  README.md  README.rst  TODO.md  gen.py  index.html  main.py  pyproject.toml  robots.txt  setup.py  sitemap.xml  versions.json
.github/: dependabot.yml  labeler.yml  labels.yml
.github/workflows/: ci_cd.yml  ci_cd_doc.yml  ci_cd_wheel.yml  dependabot-auto-merge.yml  dev_portal_docs.yml  label.yml  process-sphinx-md.yml
.github/workflows/setup-python/: action.yml
.github/workflows/setup-stubs/: action.yml
.github/workflows/setup-version-dirs/: action.yml
.github/workflows/update-gh-pages/: action.yml
doc/: .vale.ini  Makefile  index.rst  make.bat  versions.json
doc/changelog.d/: 107.added.md  109.maintenance.md  115.maintenance.md  116.documentation.md  117.documentation.md  118.dependencies.md  122.added.md  125.fixed.md  130.fixed.md  131.maintenance.md  132.maintenance.md  133.maintenance.md  134.maintenance.md  136.maintenance.md  137.maintenance.md  138.fixed.md  139.maintenance.md  141.fixed.md  142.maintenance.md  143.maintenance.md  145.maintenance.md  146.maintenance.md  147.maintenance.md  150.maintenance.md  153.maintenance.md  154.maintenance.md  157.maintenance.md  16.added.md  164.maintenance.md  167.maintenance.md  169.maintenance.md  17.changed.md  170.maintenance.md  173.added.md  174.fixed.md  175.maintenance.md  179.maintenance.md  18.changed.md  183.maintenance.md  185.fixed.md  (+76 more)
doc/source/: conf.py  index.rst
doc/source/_autoapi_templates/: index.rst
doc/source/_static/: switcher-sync.js  version-redirect.js
doc/source/_templates/: redirect.html
doc/source/_templates/autoapi/: index.rst
doc/source/_templates/autoapi/python/: class.rst  module.rst
doc/styles/Vocab/ANSYS/: accept.txt
doc/styles/config/vocabularies/ANSYS/: accept.txt
package/: README.rst  pyproject.toml
package/doc/: Makefile  make.bat
package/doc/source/: conf.py  index.rst
package/doc/source/_autoapi_templates/: index.rst
package/doc/styles/Vocab/ANSYS/: accept.txt
pull/118/: objects.inv
pull/118/_sources/api/: index.rst.txt
pull/118/api/: index.html
pull/120/: 404.html  py-modindex.html
pull/120/_sources/api/: index.rst.txt
pull/120/api/: index.html
pull/120/api/ansys/mechanical/stubs/: index.html
pull/121/_sources/api/: index.rst.txt
pull/125/api/ansys/mechanical/stubs/: index.html
pull/127/: index.html  objects.inv
pull/132/: search.html
pull/132/api/: index.html
pull/133/api/: index.html
pull/136/: py-modindex.html
pull/153/: index.html  py-modindex.html
pull/153/api/ansys/mechanical/stubs/: index.html
pull/154/: 404.html  search.html
pull/156/: objects.inv
pull/156/_sources/: index.rst.txt
pull/156/api/: index.html
pull/159/: 404.html
pull/160/: index.html  py-modindex.html  search.html
pull/160/api/: index.html
pull/160/api/ansys/mechanical/stubs/: index.html
pull/165/: 404.html  index.html  py-modindex.html  search.html
pull/165/api/: index.html
pull/165/api/ansys/mechanical/stubs/: index.html
pull/166/: objects.inv  py-modindex.html
pull/166/api/: index.html
pull/173/: 404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pull/173/_static/: search.json
pull/173/api/: index.html
pull/173/api/ansys/mechanical/stubs/: index.html
pull/176/: index.html
pull/177/: objects.inv
pull/178/: py-modindex.html
pull/179/_sources/api/: index.rst.txt
pull/179/api/: index.html
pull/180/: search.html
pull/180/api/ansys/mechanical/stubs/: index.html
pull/182/: py-modindex.html
pull/183/: 404.html  search.html
pull/183/api/: index.html
pull/183/api/ansys/mechanical/stubs/: index.html
pull/189/: 404.html  objects.inv  py-modindex.html  search.html
pull/189/_sources/api/: index.rst.txt
pull/189/api/: index.html
pull/189/api/ansys/mechanical/stubs/: index.html
pull/233/: search.html
pull/233/api/: index.html
pull/251/api/: index.html
pull/252/_sources/api/: index.rst.txt
pull/253/: py-modindex.html  search.html
pull/253/api/ansys/mechanical/stubs/: index.html
pull/256/api/: index.html
pull/257/: 404.html  objects.inv
scripts/: 01-clean-id.py  02-clean-empty-row.py  03-create-toc-from-html-mechanical.py  04-add-header-to-tables.py  05-remove-link-in-heading.py  fix-href-html.py  fix-href-md.py  replace-windows-apostrophes.py
src/ansys/mechanical/stubs/: __init__.py
src/ansys/mechanical/stubs/stub_generator/: __init__.py  create_files.py  generate_content.py
src/stub_generator/: create_files.py  generate_content.py
stub_generator/: __init__.py  create_files.py  generate_content.py
tests/: test_regex.py
version/: 404.html  index.html  py-modindex.html  search.html
version/0.1/: 404.html  index.html  objects.inv  py-modindex.html  search.html
version/0.1/_sources/api/: index.rst.txt
version/0.1/api/: index.html
version/0.1/api/ansys/mechanical/stubs/: index.html
version/2024.1/: 404.html  index.html  objects.inv  py-modindex.html  search.html
version/2024.1/_sources/api/: index.rst.txt
version/2024.1/_static/: documentation_options.js
version/2024.1/api/: index.html
version/2024.1/api/ansys/mechanical/stubs/: index.html
version/2024.2/: 404.html  index.html  objects.inv
version/2024.2/_sources/api/: index.rst.txt
version/api/: index.html
version/api/ansys/mechanical/stubs/: index.html
version/api/ansys/mechanical/stubs/stub_generator/: index.html
version/api/ansys/mechanical/stubs/v241/: index.html
version/api/ansys/mechanical/stubs/v242/: index.html
version/dev/: 404.html  index.html  objects.inv  py-modindex.html  search.html
version/dev/_sources/api/: index.rst.txt
version/dev/api/: index.html
version/stable/: 404.html  index.html  objects.inv  py-modindex.html  search.html
version/stable/_sources/api/: index.rst.txt
version/stable/_static/: custom.css  documentation_options.js
version/stable/api/: index.html
(+123358 files in other folders)
