[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-mechanical-stubs"
version = "0.1.0"
description = "PyMechanical scripting API stubs."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme[autoapi]==0.16.5",
    "Sphinx==7.3.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-notfound-page==1.0.2",
    "sphinx-design==0.6.0",
    "sphinx-jinja==2.0.2",
    "autodoc_pydantic==2.0.1",
    "jupyter_sphinx==0.5.3",
    "numpydoc==1.6.0",
    "sphinx-autodoc-typehints==1.25.3",
    "sphinxcontrib-globalsubs==0.1.1",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.6.0",
    "sphinx-markdown-builder==0.6.6",
    "sphinxnotes-strike==1.2.1",
]

[project.urls]
Source = "https://github.com/ansys/mechanical-stubs/"
Tracker = "https://github.com/ansys/mechanical-stubs/issues"
Homepage = "https://github.com/ansys/mechanical-stubs"
Documentation = "https://scripting.mechanical.docs.pyansys.com"

[tool.flit.module]
name = "ansys.mechanical.stubs"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.mechanical"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.towncrier]
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pymechanical-stubs/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pymechanical-stubs/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
