[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-mechanical-stubs"
version = "0"
description = "PyMechanical scripting API stubs."
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-sphinx-theme>=0.8.2",
    "flit>3.8.0",
    "sphinx-notfound-page==0.8.3",
    "numpydoc==1.5.0",
    "sphinx-copybutton==0.5.1",
    "build>=0.10.0",
    "sphinx-autoapi==3.0.0",
    "sphinx-jinja==2.0.2",
]

[tool.flit.module]
name = "ansys.mechanical.stubs"

[project.urls]
Source = "https://github.com/ansys-internal/mechanical-stubs/"
Tracker = "https://github.com/ansys-internal/mechanical-stubs/issues"
Homepage = "https://github.com/ansys-internal/mechanical-stubs"
