[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-mechanical-stubs"
version = "0"
description = "PyMechanical scripting API stubs."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ansys-pythonnet>=3.1.0rc2",
    "build>=0.10.0",
    "colorama==0.4.6",
    "charset-normalizer==3.3.2",
    "flit>3.8.0",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.13.1",
    "autodoc_pydantic==2.0.1",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.3",
    "numpydoc==1.6.0",
    "myst-parser==2.0.0",
    "Sphinx==7.2.6",
    "sphinx-autoapi==3.0.0",
    "sphinx-autodoc-typehints==1.25.2",
    "sphinxcontrib-globalsubs==0.1.1",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-jinja==2.0.2",
    "sphinx-notfound-page==0.8.3",
    "sphinxnotes-strike==1.2",
]

[tool.flit.module]
name = "ansys.mechanical.stubs"

[project.urls]
Source = "https://github.com/ansys-internal/mechanical-stubs/"
Tracker = "https://github.com/ansys-internal/mechanical-stubs/issues"
Homepage = "https://github.com/ansys-internal/mechanical-stubs"
