[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-mechanical-stubs"
version = "0"
description = "PyMechanical scripting API stubs."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "build==1.0.3",
    "certifi==2024.2.2",
    "charset_normalizer==3.3.2",
    "colorama==0.4.6",
    "docutils==0.20.1",
    "flit_core==3.9.0",
    "flit==3.9.0",
    "idna==3.6",
    "importlib_metadata==7.0.1",
    "packaging==23.2",
    "pyproject_hooks==1.0.0",
    "requests==2.31.0",
    "tomli_w==1.0.0",
    "tomli==2.0.1",
    "urllib3==2.2.0",
    "zipp==3.17.0",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==0.13.2",
    "autodoc_pydantic==2.0.1",
    "jupyter_sphinx==0.5.3",
    "nbsphinx==0.9.3",
    "numpydoc==1.6.0",
    "Sphinx==7.2.6",
    "sphinx-autoapi==3.0.0",
    "sphinx-autodoc-typehints==1.25.3",
    "sphinxcontrib-globalsubs==0.1.1",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.5.0",
    "sphinx-jinja==2.0.2",
    "sphinxnotes-strike==1.2.1",
]

[tool.flit.module]
name = "ansys.mechanical.stubs"

[project.urls]
Source = "https://github.com/ansys-internal/mechanical-stubs/"
Tracker = "https://github.com/ansys-internal/mechanical-stubs/issues"
Homepage = "https://github.com/ansys-internal/mechanical-stubs"
Documentation = "https://flit.readthedocs.io/en/latest/"
